--- a/src/app/components/usuario/usuario-crear/usuario-crear.component.html
+++ b/src/app/components/usuario/usuario-crear/usuario-crear.component.html
@@ -1,61 +1,90 @@
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+
 <div class="espacio">
     <h1>Crear Usuario</h1>
-  
+
     <div class="container">
-      <div class="back-btn-container">
-        <button class="btn btn-primary" (click)="volver()">Volver atrás</button>
-      </div>
+        <div class="back-btn-container">
+            <button class="btn btn-primary" (click)="volver()">Volver atrás</button>
+        </div>
     </div>
-  
+
     <br>
-  
+
     <div class="container">
-      <div class="form-container">
-        <h2>Crear Usuario:</h2>
-        <form [formGroup]="usuarioForm" (ngSubmit)="agregarUsuario()">
-          <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre del usuario:</label>
-            <input type="text" id="nombre" class="form-control" formControlName="nombre"
-              placeholder="Ingrese el nombre del usuario" aria-label="Nombre del usuario" required>
-            <div *ngIf="usuarioForm.get('nombre')?.touched && usuarioForm.get('nombre')?.invalid" class="text-danger">
-              <small *ngIf="usuarioForm.get('nombre')?.errors?.['required']">El nombre es obligatorio.</small>
-            </div>
-          </div>
-  
-          <div class="mb-3">
-            <label for="email" class="form-label">Correo electrónico:</label>
-            <input type="email" class="form-control" id="email" formControlName="email"
-              placeholder="Ingrese el correo electrónico" aria-label="Correo electrónico" required>
-            <div *ngIf="usuarioForm.get('email')?.touched && usuarioForm.get('email')?.invalid" class="text-danger">
-              <small *ngIf="usuarioForm.get('email')?.errors?.['required']">El correo electrónico es obligatorio.</small>
-              <small *ngIf="usuarioForm.get('email')?.errors?.['email']">El correo electrónico no es válido.</small>
-            </div>
-          </div>
-  
-          <div class="mb-3">
-            <label for="password" class="form-label">Contraseña:</label>
-            <input type="password" class="form-control" id="password" formControlName="password"
-              placeholder="Ingrese la contraseña" aria-label="Contraseña" required minlength="6">
-            <div *ngIf="usuarioForm.get('password')?.touched && usuarioForm.get('password')?.invalid" class="text-danger">
-              <small *ngIf="usuarioForm.get('password')?.errors?.['required']">La contraseña es obligatoria.</small>
-              <small *ngIf="usuarioForm.get('password')?.errors?.['minlength']">La contraseña debe tener al menos 6 caracteres.</small>
-            </div>
-          </div>
-  
-          <div class="mb-3">
-            <label for="confirmPassword" class="form-label">Confirmar Contraseña:</label>
-            <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword"
-              placeholder="Confirme la contraseña" aria-label="Confirmar Contraseña" required>
-            <div *ngIf="usuarioForm.get('confirmPassword')?.touched && usuarioForm.get('confirmPassword')?.invalid" class="text-danger">
-              <small *ngIf="usuarioForm.get('confirmPassword')?.errors?.['required']">La confirmación de la contraseña es obligatoria.</small>
-              <small *ngIf="usuarioForm.hasError('passwordMismatch')">Las contraseñas no coinciden.</small>
-            </div>
-          </div>
-  
-          <button type="submit" class="btn btn-primary" aria-label="Enviar formulario"
-            [disabled]="!usuarioForm.valid">Enviar</button>
-        </form>
-      </div>
+        <div class="form-container">
+            <h2>Crear Usuario:</h2>
+            <form [formGroup]="usuarioForm" (ngSubmit)="agregarUsuario()">
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre del usuario:</label>
+                    <input type="text" id="nombre" class="form-control" formControlName="nombre"
+                        placeholder="Ingrese el nombre del usuario" aria-label="Nombre del usuario" required>
+                    <div *ngIf="usuarioForm.get('nombre')?.touched && usuarioForm.get('nombre')?.invalid"
+                        class="text-danger">
+                        <small *ngIf="usuarioForm.get('nombre')?.errors?.['required']">El nombre es obligatorio.</small>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo electrónico:</label>
+                    <input type="email" class="form-control" id="email" formControlName="email"
+                        placeholder="Ingrese el correo electrónico" aria-label="Correo electrónico" required>
+                    <div *ngIf="usuarioForm.get('email')?.touched && usuarioForm.get('email')?.invalid"
+                        class="text-danger">
+                        <small *ngIf="usuarioForm.get('email')?.errors?.['required']">El correo electrónico es
+                            obligatorio.</small>
+                        <small *ngIf="usuarioForm.get('email')?.errors?.['email']">El correo electrónico no es
+                            válido.</small>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña:</label>
+                    <div class="input-group">
+                        <input [type]="passwordVisible ? 'text' : 'password'" class="form-control" id="password"
+                            formControlName="password" placeholder="Ingrese la nueva contraseña" aria-label="Contraseña"
+                            required minlength="6">
+                        <div class="input-group-append">
+                            <button type="button" class="btn btn-outline-secondary"
+                                (click)="togglePasswordVisibility()">
+                                <i class="fas" [ngClass]="passwordVisible ? 'fa-eye-slash' : 'fa-eye'"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div *ngIf="usuarioForm.get('password')?.touched && usuarioForm.get('password')?.invalid"
+                        class="text-danger">
+                        <small *ngIf="usuarioForm.get('password')?.errors?.['required']">La contraseña es
+                            obligatoria.</small>
+                        <small *ngIf="usuarioForm.get('password')?.errors?.['minlength']">La contraseña debe tener al
+                            menos 6 caracteres.</small>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="confirmPassword" class="form-label">Confirmar Contraseña:</label>
+                    <div class="input-group">
+                        <input [type]="confirmPasswordVisible ? 'text' : 'password'" class="form-control"
+                            id="confirmPassword" formControlName="confirmPassword" placeholder="Confirme la contraseña"
+                            aria-label="Confirmar Contraseña" required>
+                        <div class="input-group-append">
+                            <button type="button" class="btn btn-outline-secondary"
+                                (click)="toggleConfirmPasswordVisibility()">
+                                <i class="fas" [ngClass]="confirmPasswordVisible ? 'fa-eye-slash' : 'fa-eye'"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div *ngIf="usuarioForm.get('confirmPassword')?.touched && usuarioForm.get('confirmPassword')?.invalid"
+                        class="text-danger">
+                        <small *ngIf="usuarioForm.get('confirmPassword')?.errors?.['required']">La confirmación de la
+                            contraseña es obligatoria.</small>
+                        <small *ngIf="usuarioForm.hasError('passwordMismatch')">Las contraseñas no coinciden.</small>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn btn-primary" aria-label="Enviar formulario"
+                    [disabled]="!usuarioForm.valid">Enviar</button>
+            </form>
+        </div>
     </div>
-  </div>
-  
+</div>
